# prime

./: .gitignore  Info.plist
Prime.xcodeproj/: project.pbxproj
backend/conversation_service/: .env  .env.example  README.md  pyproject.toml
backend/conversation_service/app/: auth.py  config.py  main.py  session_manager.py  supabase_client.py
backend/conversation_service/app/routes/: conversation.py  health.py
backend/conversation_service/app/services/: elevenlabs_service.py  user_profile_service.py
frontend/: README.md  package.json  pnpm-lock.yaml
prime/: AgeInputView.swift  AllDoneView.swift  CoachingStyleSelectionView.swift  Config.swift  ContentView.swift  ContinueButtonView.swift  ElevenLabsAPI.swift  GenderSelectionView.swift  GoalRecencySelectionView.swift  GoalVisualizationInputView.swift  GoalWritingInfoView.swift  GoogleService-Info.plist  LaunchScreen.storyboard  MicroActionInputView.swift  NameInputView.swift  OnboardingHeaderView.swift  OnboardingTextArea.swift  OnboardingView.swift  OnboardingViewModel.swift  PlanCalculationView.swift  PrimaryGoalInputView.swift  PrimeChat.swift  PrimeChat2.swift  ProfileView.swift  SelectableChip.swift  SignInView.swift  SpeechRecognitionManager.swift  SupabaseManager.swift  VisualizationInfoView.swift  WelcomeIntroView.swift  primeApp.swift
wealthiq/: AgeInputView.swift  CoachingAndAccountabilityViews.swift  Config.swift  ContentView.swift  ContinueButtonView.swift  DebugAuthView.swift  Font+Outfit.swift  GenderSelectionView.swift  GoalRecencySelectionView.swift  (+22 more)
wealthiq.xcodeproj/: project.pbxproj
(+17 files in other folders)
