[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation_service"
version = "0.1.0"
description = "FastAPI service handling ElevenLabs voice conversations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<0.31",
  "httpx>=0.27,<1",
  "python-dotenv>=1,<2",
  "supabase>=2.5,<3",
  "python-jose[cryptography]>=3.3,<4",
  "pydantic-settings>=2.3,<3",
  "websockets>=15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
